fix: find connections broken after refactor the data model (wip)
query needed re-implementing; it still doesn't work i.e. doesn't find
any matches when there should be but at least doesn't crash